# Modern-NPC-Pathing

./: .gitignore  BUILDING.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  COPYING  LICENSE  MOD_AUDIT.md  NEXUS_RELEASE_NOTES.md  README.md  build_release.ps1  generate_esp.py  vcpkg.json
.github/workflows/: build.yml
fomod_src/fomod/: ModuleConfig.xml  info.xml
package/: README.md
package/Data/: NPCPathingNG.esp
package/Data/MCM/Config/NPCPathingNG/: config.json
package/Data/SKSE/Plugins/: NPCPathingNG.ini
package/Data/Seq/: NPCPathingNG.seq
src/: PCH.h  evg_traversal.cpp  evg_traversal.h  main.cpp  npc_parkour.cpp  npc_parkour.h  parkour_types.h  pathing.cpp  pathing.h  raycast.cpp  raycast.h  settings.cpp  settings.h  version.h
tests/: test_release.py
tools/: package_fomod.py  package_release.py  package_source.py
